Start using Stonecutter for 1.21.4, 1.21.8 and 1.21.10. Rounded backgrounds are not available right now